Add methods to IBookService - implement in Collections impl class, return sorted results